--- a/TrackIt.html
+++ b/TrackIt.html
@@ -4,9 +4,37 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <title>Document</title>
+    <title>TrackIt</title>
+    <style>
+        .container {
+    text-align: center;
+}
+.table{
+    margin-left:auto;
+    margin-right:auto;
+}
+.navbar {
+    padding: 0!important;
+    background-color: #566C87!important;
+}
+.head {
+    font-size: 19px;
+    font-weight: bold;
+}
+.nav-item {
+    padding: .6rem;
+}
+.nav-item:hover {
+    background-color: #306799;
+}
+.nav-link {
+    color: white!important;
+}
+section {
+    padding: 1rem;
+}
+    </style>
 </head>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/js/bootstrap.min.js"></script>
 <body>
